<resources>
    <string name="app_name">Travelguide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="review1">Travelguide has made my family vacation for which I was saving from long time memorable and an experience of a lifetime. <b>- Akshit</b></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="silver_benifits"><ul><li>Guide</li></ul></string>
    <string name="gold_benifits"><ul><li>Guide</li>\n<li>Vehicle</li></ul></string>
    <string name="platinum_benifits"><ul><li>Guide</li>\n<li>Vehicle</li>\n<li>Accomodation</li></ul></string>
</resources>
