<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SelectPackageFragment">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="Start: "
                        android:fontFamily="@font/lato_light"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"

                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="From: "
                        android:fontFamily="@font/lato_light"
                        android:textSize="20sp"
                        android:layout_marginTop="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="To: "
                        android:fontFamily="@font/lato_light"
                        android:textSize="20sp"
                        android:layout_marginTop="5dp"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="Start: "
                        android:fontFamily="@font/lato_light"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:id="@+id/destination"
                        android:textStyle="bold"
                        android:textColor="#000"

                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="From: "
                        android:fontFamily="@font/lato_light"
                        android:textSize="20sp"
                        android:layout_marginTop="5dp"
                        android:id="@+id/startDate"
                        android:textStyle="bold"
                        android:textColor="#000"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="To: "
                        android:fontFamily="@font/lato_light"
                        android:textSize="20sp"
                        android:layout_marginTop="5dp"
                        android:id="@+id/endDate"
                        android:textStyle="bold"
                        android:textColor="#000"
                        />

                </LinearLayout>
            </LinearLayout>
            <RadioGroup
                android:layout_below="@+id/textview_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:id="@+id/radgrp">
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/silver_package"
                        android:shadowColor="#000"
                        android:shadowDx="0"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:shadowDy="30"
                        android:shadowRadius="50"
                        android:elevation="0dp"
                        >
                        <LinearLayout
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="10dp"
                                android:layout_height="match_parent"
                                android:src=" #C0C0C0"/>
                            <TextView
                                android:layout_marginLeft="10dp"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:text="Silver"
                                android:textColor="#000"
                                android:gravity="center_vertical"
                                android:layout_weight="1"
                                android:textStyle="bold"
                                android:textSize="40dp"
                                android:fontFamily="@font/lato_light"
                                />
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                >
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:fontFamily="@font/lato_light"
                                    android:textSize="24sp"

                                    android:layout_weight="1"
                                    android:textStyle="bold"
                                    android:textColor="#000"
                                    android:gravity="center_vertical"
                                    android:text="Benifits"/>
                                <TextView
                                    android:layout_width="200dp"
                                    android:layout_height="0dp"
                                    android:layout_weight="2"
                                    android:fontFamily="@font/lato_light"
                                    android:textSize="18sp"
                                    android:textColor="#000"
                                    android:text="@string/silver_benifits"
                                    />
                            </LinearLayout>


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:layout_marginTop="20dp"
                        android:shadowColor="#000"
                        android:id="@+id/gold_package"
                        android:shadowDx="0"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:shadowDy="30"
                        android:shadowRadius="50"
                        android:elevation="0dp"
                        >
                        <LinearLayout
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="10dp"
                                android:layout_height="match_parent"
                                android:src="#FFD700"/>
                            <TextView
                                android:layout_marginLeft="10dp"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:text="Gold"
                                android:gravity="center_vertical"
                                android:layout_weight="1"
                                android:textStyle="bold"
                                android:textSize="40dp"
                                android:fontFamily="@font/lato_light"
                                android:textColor="#000"
                                />
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                >
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:fontFamily="@font/lato_light"
                                    android:textSize="24sp"
                                    android:layout_weight="1"
                                    android:textStyle="bold"
                                    android:textColor="#000"
                                    android:gravity="center_vertical"
                                    android:text="Benifits"/>
                                <TextView
                                    android:layout_width="200dp"
                                    android:layout_height="0dp"
                                    android:layout_weight="2"
                                    android:fontFamily="@font/lato_light"
                                    android:textSize="18sp"
                                    android:textColor="#000"
                                    android:text="@string/gold_benifits"
                                    />
                            </LinearLayout>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="0dp"
                        android:shadowColor="#000"
                        android:shadowDx="0"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:shadowDy="30"
                        android:shadowRadius="50"
                        android:id="@+id/platinum_package"
                        android:elevation="0dp"
                        >
                        <LinearLayout
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="10dp"
                                android:layout_height="match_parent"
                                android:src="#E5E4E2"/>
                            <TextView
                                android:layout_marginLeft="10dp"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:text="Platinum"
                                android:gravity="center_vertical"
                                android:layout_weight="1"
                                android:textStyle="bold"
                                android:textSize="40dp"
                                android:fontFamily="@font/lato_light"
                                android:textColor="#000"

                                />
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                >
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:fontFamily="@font/lato_light"
                                    android:textSize="24sp"
                                    android:layout_weight="1"
                                    android:textStyle="bold"
                                    android:textColor="#000"
                                    android:gravity="center_vertical"
                                    android:text="Benifits"/>
                                <TextView
                                    android:layout_width="200dp"
                                    android:layout_height="0dp"
                                    android:layout_weight="2"
                                    android:fontFamily="@font/lato_light"
                                    android:textSize="18sp"
                                    android:textColor="#000"
                                    android:text="@string/platinum_benifits"
                                    />
                            </LinearLayout>


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <Button
                        android:text="Book now"
                        android:textAllCaps="true"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="70dp"
                        android:background="@drawable/button_background"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/athiti"
                        android:textColor="@color/login_form_details"
                        android:textSize="30dp"
                        android:id="@+id/book_now"
                        />
                </LinearLayout>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

</FrameLayout>